# tf-modules

./: .gitignore
infra-argocd/: README.md  main.tf  variables.tf  versions.tf
infra-kafka/: variables.tf
infra-kafka-confluent/: main.tf
infra-mail/: main.tf
infra-minio/: main.tf  variables.tf
infra-minio-bucket/: main.tf  versions.tf
infra-minio-bucket-users/: main.tf  variables.tf
infra-minio-user/: main.tf  variables.tf  versions.tf
infra-mysql/: main.tf  variables.tf  versions.tf
infra-namespaces/: main.tf  variables.tf
infra-openbao/: main.tf  variables.tf  versions.tf
infra-temporal/: variables.tf
mysql-cluster/: 01-secrets-configs.tf  02-services.tf  03-pvcs.tf  04-instances.tf  05-clusterset.tf  06-router.tf  07-mysqlsh-job.tfx  providers.tf  variables.tf  versions.tf
mysql-cluster/mysqlpy/: .style.yapf  pyproject.toml  test-connection.py
mysql-cluster/mysqlpy/mysqlpy/: mock_mysqlsh.py  setup-clusterset.py  setup_cluster.py  test.py  test2.py
mysql-cluster/mysqlpy/tests/: conftest.py  test_cluster.py  test_instance.py
mysql-db-pair/: main.tf  variable.tf  versions.tf
mysql-migrate/: main.tf  variables.tf  versions.tf
mysql-operator/: main.tf  provider.tfx  variables.tf
mysql-replica-user/: main.tf  variables.tf  versions.tf
mysql-schema/: dev.auto.json  main.tf  variables.tf  versions.tf
namespace-exists/: main.tf  variables.tf  versions.tf
vault-kv-secret/: main.tf  variables.tf
vault-kv-token/: main.tf  variables.tf
vault-namespace/: main.tf  variables.tf
vault-tf-setup/: main.tf  variables.tf  versions.tf
(+88 files in other folders)
